--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>O'zbekiston Travel | Tours & Adventures in Uzbekistan</title>
-    <meta name="description" content="Discover the magic of Uzbekistan. Explore ancient Silk Road cities, breathtaking architecture, and unforgettable adventures with O'zbekiston Travel." />
-    <meta name="author" content="O'zbekiston Travel" />
+    <title>Qaraqalpaqstan Travel | Tours & Adventures in Karakalpakstan</title>
+    <meta name="description" content="Discover the wonders of Karakalpakstan. Explore Nukus, the Aral Sea region, and unique cultural heritage with Qaraqalpaqstan Travel." />
+    <meta name="author" content="Qaraqalpaqstan Travel" />
 
-    <meta property="og:title" content="O'zbekiston Travel | Tours & Adventures in Uzbekistan" />
-    <meta property="og:description" content="Discover the magic of Uzbekistan. Explore ancient Silk Road cities, breathtaking architecture, and unforgettable adventures." />
+    <meta property="og:title" content="Qaraqalpaqstan Travel | Tours & Adventures in Karakalpakstan" />
+    <meta property="og:description" content="Discover the wonders of Karakalpakstan. Explore Nukus, the Aral Sea region, and unique cultural heritage." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/hero-karakalpakstan.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@uzbektravel" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@qaraqalpaqtravel" />
+    <meta name="twitter:image" content="/hero-karakalpakstan.jpg" />
   </head>
 
   <body>
