uzb language again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qaraqalpaqstan Travel | Tours & Adventures in Karakalpakstan</title>
+    <title>Qoraqalpog'stan Travel | Tours & Adventures in Karakalpakstan</title>
     <meta name="description" content="Discover the wonders of Karakalpakstan. Explore Nukus, the Aral Sea region, and unique cultural heritage with Qaraqalpaqstan Travel." />
     <meta name="author" content="Qaraqalpaqstan Travel" />
 
